<resources>
    <string name="app_name">Patient Chat</string>
    <string name="action_clear_patients">Clear Patients</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="add_patient_fragment_label">Add Patient Fragment</string>
    <string name="patient_list_fragment_label">Patient List Fragment</string>
    <string name="patient_detail_fragment_label">Patient Detail Fragment</string>
    <string name="video_chat_activity_label">Video Chat Activity</string>
    <string name="hotspot_fragment_label">Hotspot Fragment</string>
    <string name="request_permissions_fragment_label">Request Permissions Fragment</string>

    <!--    Welcome fragment  -->
    <string name="hello_welcome_fragment">Welcome to Patient Chat.</string>
    <string name="add_first_patient">Add First Patient</string>

    <!--    Add Patient fragment  -->
    <string name="hello_add_patient_fragment">Add your patient now.</string>
    <string name="patient_name_hint">Patient Name</string>
    <string name="next">Next</string>

    <!--    Patient Detail fragment  -->
    <string name="nav_chat">Chat</string>
    <string name="nav_list">List</string>

    <!--    List fragment  -->
    <string name="add_patient">Add Patient</string>

    <!--    Video chat activity & fragment-->
    <string name="title_activity_video_chat">VideoChatActivity</string>
    <string name="hotspot_down">Hotspot Off</string>
    <string name="hotspot_active">Hotspot On</string>
    <string name="server_active">Server On</string>
    <string name="server_down">Server Off</string>
    <string name="patient_connected">%1$s is connected</string>
    <string name="patient_disconnected">No one is connected</string>
    <string name="server_details">In your browser, go to:\n  http://%1$s:%2$d</string>
    <string name="hotspot_details">Connect to WiFi Network:\nSSID: %1$s \npassword: %2$s</string>
    <string name="os_update_needed">To turn on a WiFi Hotspot, Oreo (API 26) is required. Please update your OS.</string>
    <string name="why_permissions">To start a local hotspot, the OS requires that you grant permissions to Change WIFI Settings and to access Fine Location.</string>
    <string name="ask_me_again">Ask me again.</string>

</resources>
