<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PatientListFragment">

    <fragment
        android:id="@+id/WelcomeFragment"
        android:name="com.patientchat.androidapp.features.WelcomeFragment"
        android:label="@string/welcome_fragment_label"
        tools:layout="@layout/fragment_welcome">

        <action
            android:id="@+id/action_WelcomeFragment_to_AddPatientFragment"
            app:destination="@id/AddPatientFragment" />
    </fragment>
    <fragment
        android:id="@+id/AddPatientFragment"
        android:name="com.patientchat.androidapp.features.patients.AddPatientFragment"
        android:label="@string/add_patient_fragment_label"
        tools:layout="@layout/fragment_add_patient">

        <action
            android:id="@+id/action_AddPatientFragment_to_PatientListFragment"
            app:destination="@id/PatientListFragment" />
        <action
            android:id="@+id/action_AddPatientFragment_to_PatientDetailFragment"
            app:destination="@id/PatientDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/PatientListFragment"
        android:name="com.patientchat.androidapp.features.patients.PatientListFragment"
        android:label="@string/patient_list_fragment_label"
        tools:layout="@layout/fragment_patient_list">

        <action
            android:id="@+id/action_PatientListFragment_to_WelcomeFragment"
            app:destination="@id/WelcomeFragment" />
        <action
            android:id="@+id/action_PatientListFragment_to_AddPatient"
            app:destination="@id/AddPatientFragment" />
    </fragment>
    <fragment
        android:id="@+id/PatientDetailFragment"
        android:name="com.patientchat.androidapp.features.patients.PatientDetailFragment"
        android:label="@string/patient_detail_fragment_label"
        tools:layout="@layout/fragment_add_patient">

        <action
            android:id="@+id/action_PatientDetailFragment_to_PatientListFragment"
            app:destination="@id/PatientListFragment" />
    </fragment>
</navigation>
