<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.hotspot.HotspotFragment"
    android:padding="@dimen/text_margin">

    <TextView
        android:id="@+id/textview_hotspot_details"
        style="@style/patient_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotspot_down"
        app:layout_constraintBottom_toTopOf="@id/textview_webview_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_webview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_preview"
        app:layout_constraintBottom_toTopOf="@id/webview_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_hotspot_details" />

    <WebView
        android:id="@+id/webview_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/button_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_webview_title" />

    <TextView
        android:id="@+id/textview_patient_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_disconnected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_hotspot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotspot_down"
        app:backgroundTint="@color/colorOff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webview_preview" />

    <Button
        android:id="@+id/button_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_down"
        app:backgroundTint="@color/colorOff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_hotspot"
        app:layout_constraintTop_toBottomOf="@id/webview_preview" />
</androidx.constraintlayout.widget.ConstraintLayout>